Dev/Prod Config Initial Setup

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
   <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
+
     <title>OwlChat</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="main.css">
