--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     </section>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script>var exports = {};</script>
     <script src='index.js' type='module'></script>
   </body>
 </html>
