More fixes to config

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     </section>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>var exports = {};</script>
+    <script src='environmentConfig.js'></script>
     <script src='index.js' type='module'></script>
   </body>
 </html>
