--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,36 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
 
-    <title>OwlChat</title>
+    <title>ChatApp</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="main.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <section id="chat-info-wrapper">
-      <h3 contenteditable="true" id="username"></h3>
-      <ul id="rooms-wrapper">
-        <li class="room-info">
-          <p class="room">Global</p>
-        </li>
+      <div id="username-wrapper">
+        <h3 contenteditable="true" id="username"></h3>
+        <button id="username-edit">Edit</button>
+      </div>
+      
+      <h5 id="usercode"></h5>
+
+      <ul id="contacts-wrapper">
+        <!-- <li class="contact-info">
+          <p class="contact">Global</p>
+        </li> -->
+      </ul>
+
+        <form action="" id="addContactWrapper">
+          <input id="ContactInput" type="text" autocomplete="off">
+          <button>Add</button>
+        </form>
+        
       </ul>
     </section>
 
     <section id="chat-box-wrapper">
-      <h3 id="roomname">Global</h3>
+      <h3 id="contactname">Global</h3>
 
       <ul id="message-list">
         <!-- <li class="message">
@@ -29,7 +43,7 @@
       </ul>
 
       <form action="" id="messageForm">
-        <input id="messageInput" autocomplete="on" />
+        <input id="messageInput" autocomplete="off" />
         <button>Send</button>
       </form>
 
